--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Visual Studio Files
+*.suo
+*.opensdf
+*.sdf
+Gravitation3D/Debug/*
+G3DLib/Debug/*
+G3DStereo/Debug/*
+G3DScreenSaver/Debug/*
+SystemGenerator/Debug/*
