--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,6 @@ G3DLib/Debug/*
 G3DStereo/Debug/*
 G3DScreenSaver/Debug/*
 SystemGenerator/Debug/*
+registrationKeyGenerator/Debug/*
 *.ipch
+*.vs/
